Leikurinn byrjaður að renderast(smá)

--- a/app/src/main/res/layout-land/fragment_canvas.xml
+++ b/app/src/main/res/layout-land/fragment_canvas.xml
@@ -5,11 +5,11 @@
     tools:context="school.throstur.backgammonandroid.Fragments.CanvasFragment"
     >
 
-    <ImageView
+    <school.throstur.backgammonandroid.DrawingCanvas
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/drawing_canvas"
-        android:background="@drawable/game_board" />
+         />
 
     <Button
         style="?android:attr/buttonStyleSmall"
@@ -138,7 +138,7 @@
         android:layout_height="150dp"
         android:background="@color/black_transparent"
         android:layout_gravity="center"
-        android:visibility="visible">
+        android:visibility="gone">
 
         <TextView
             android:layout_width="wrap_content"
