--- a/app/src/main/res/layout-land/activity_stats.xml
+++ b/app/src/main/res/layout-land/activity_stats.xml
@@ -8,7 +8,7 @@
 
     <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
-        android:layout_height="250dp"
+        android:layout_height="match_parent"
         android:id="@+id/stats_list"
         tools:listitem="@layout/stats_entry"
         >
