--- a/app/src/main/res/layout-land/activity_trophy.xml
+++ b/app/src/main/res/layout-land/activity_trophy.xml
@@ -8,7 +8,7 @@
 
     <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
-        android:layout_height="250dp"
+        android:layout_height="match_parent"
         android:id="@+id/trophy_list"
         tools:listitem="@layout/trophy_entry"
         >
