--- a/app/src/main/res/layout-land/trophy_entry.xml
+++ b/app/src/main/res/layout-land/trophy_entry.xml
@@ -8,7 +8,7 @@
     <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_weight="2">
+        >
         <RelativeLayout
             android:layout_width="400dp"
             android:layout_height="wrap_content"
@@ -47,23 +47,26 @@
             android:layout_margin="10dp">
             <ImageView
                 android:layout_width="200dp"
-                android:layout_height="200dp"
+                android:layout_height="match_parent"
                 android:src="@drawable/trophy_icon"
                 android:id="@+id/trophy_entry_img"
                 />
         </RelativeLayout>
-    </RelativeLayout>
 
-    <ProgressBar
-        style="?android:attr/progressBarStyleHorizontal"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/trophy_entry_progbar"
-        android:layout_weight="1"
-        android:layout_gravity="bottom"
-        android:max="100"
-        android:progress="25"
-        android:layout_marginLeft="80dp"
-        android:layout_marginRight="80dp"/>
+        <ProgressBar
+            style="?android:attr/progressBarStyleHorizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/trophy_entry_progbar"
+            android:layout_gravity="bottom"
+            android:max="100"
+            android:progress="25"
+            android:layout_marginLeft="80dp"
+            android:layout_marginRight="80dp"
+            android:layout_below="@+id/trophy_view_text"
+            android:layout_toLeftOf="@+id/trophy_view_img"
+            android:layout_alignParentBottom="true"
+            />
+    </RelativeLayout>
 
 </LinearLayout>
