--- a/app/src/main/res/layout-land/fragment_present_trophy.xml
+++ b/app/src/main/res/layout-land/fragment_present_trophy.xml
@@ -3,76 +3,88 @@
               xmlns:tools="http://schemas.android.com/tools"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
-              android:background="@drawable/border"
-              android:orientation="vertical">
+              android:orientation="vertical"
+              android:background="@color/black">
 
-    <TextView
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="400dp"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="@string/present_trophy_heading"
-        android:id="@+id/present_trophy_main_heading"
-        android:layout_gravity="center_horizontal"/>
+        android:orientation="vertical"
+        android:layout_gravity="center"
+        android:background="@color/white"
+        android:layout_marginTop="20dp"
+        android:layout_marginBottom="20dp">
 
-    <RelativeLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_weight="2">
-        <RelativeLayout
-            android:layout_width="200dp"
+        <TextView
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/present_trophy_view_heading"
-            android:layout_margin="10dp"
-            android:layout_alignParentLeft="true">
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceLarge"
-                android:id="@+id/present_trophy_entry_heading"
-                android:text="@string/heading_example"
-                />
-        </RelativeLayout>
-
-        <RelativeLayout
-            android:layout_width="200dp"
-            android:layout_height="200dp"
-            android:id="@+id/present_trophy_view_text"
-            android:layout_below="@+id/present_trophy_view_heading"
-            android:layout_margin="10dp"
-            android:layout_alignParentLeft="true">
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceSmall"
-                android:text="@string/lorem_ipsum"
-                android:id="@+id/present_trophy_entry_text"
-                />
-        </RelativeLayout>
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:text="@string/present_trophy_heading"
+            android:id="@+id/present_trophy_main_heading"
+            android:layout_gravity="center_horizontal"/>
 
         <RelativeLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/present_trophy_view_img"
-            android:layout_toRightOf="@+id/present_trophy_view_heading"
-            android:layout_margin="10dp"
-            android:layout_alignParentRight="false">
-            <ImageView
+            android:layout_weight="2">
+            <RelativeLayout
+                android:layout_width="200dp"
+                android:layout_height="wrap_content"
+                android:id="@+id/present_trophy_view_heading"
+                android:layout_margin="10dp"
+                android:layout_alignParentLeft="true">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="?android:attr/textAppearanceLarge"
+                    android:id="@+id/present_trophy_entry_heading"
+                    android:text="@string/heading_example"
+                    />
+            </RelativeLayout>
+
+            <RelativeLayout
                 android:layout_width="200dp"
                 android:layout_height="200dp"
-                android:src="@drawable/trophy_icon"
-                android:id="@+id/present_trophy_entry_img"
-                android:layout_alignParentRight="true"/>
-        </RelativeLayout>
-    </RelativeLayout>
+                android:id="@+id/present_trophy_view_text"
+                android:layout_below="@+id/present_trophy_view_heading"
+                android:layout_margin="10dp"
+                android:layout_alignParentLeft="true">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="?android:attr/textAppearanceSmall"
+                    android:text="@string/lorem_ipsum"
+                    android:id="@+id/present_trophy_entry_text"
+                    />
+            </RelativeLayout>
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/present_trophy_btn"
-        android:background="@color/btnColorPrimary"
-        android:text="@string/btn_ok"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginBottom="6dp"
-        android:layout_marginTop="6dp"/>
+            <RelativeLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/present_trophy_view_img"
+                android:layout_toRightOf="@+id/present_trophy_view_heading"
+                android:layout_margin="10dp"
+                android:layout_alignParentRight="false">
+                <ImageView
+                    android:layout_width="200dp"
+                    android:layout_height="200dp"
+                    android:src="@drawable/trophy_icon"
+                    android:id="@+id/present_trophy_entry_img"
+                    android:layout_alignParentRight="true"
+                    />
+            </RelativeLayout>
+        </RelativeLayout>
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/present_trophy_btn"
+            android:background="@color/btnColorPrimary"
+            android:text="@string/btn_ok"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginBottom="6dp"
+            android:layout_marginTop="6dp"/>
+
+    </LinearLayout>
 
 </LinearLayout>
