Bjó til slatta af takka lúkki með mismunandi liti bæði með border og ekki, breytti tökkunum þ.a. þeir séu með þetta lúkk sem background. Bætti við padding á flesta takkana.

--- a/app/src/main/res/layout-land/activity_in_game.xml
+++ b/app/src/main/res/layout-land/activity_in_game.xml
@@ -31,7 +31,7 @@
             android:id="@+id/btn_leave_match"
             android:layout_marginTop="20dp"
             android:textColor="@color/white"
-            android:background="@color/red"
+            android:background="@drawable/color_red_btn_border"
             android:layout_gravity="center_horizontal"
             android:paddingLeft="6dp"
             android:paddingRight="6dp"/>
