--- a/app/src/main/res/layout-land/activity_lobby.xml
+++ b/app/src/main/res/layout-land/activity_lobby.xml
@@ -37,8 +37,10 @@
                 android:layout_marginLeft="6dp"
                 android:layout_marginRight="6dp"
                 android:textColor="@color/white"
-                android:background="@color/colorPrimaryDark"
-                android:layout_marginBottom="6dp"/>
+                android:background="@drawable/primary_color_dark_btn_border"
+                android:layout_marginBottom="6dp"
+                android:paddingLeft="6dp"
+                android:paddingRight="6dp"/>
 
             <Button
                 style="?android:attr/buttonStyleSmall"
@@ -47,10 +49,12 @@
                 android:text="@string/btn_to_trophy"
                 android:id="@+id/to_trophy"
                 android:layout_toLeftOf="@id/to_stats"
-                android:background="@color/colorPrimaryDark"
+                android:background="@drawable/primary_color_dark_btn_border"
                 android:textColor="@color/white"
                 android:layout_marginBottom="6dp"
-                android:layout_marginLeft="6dp"/>
+                android:layout_marginLeft="6dp"
+                android:paddingRight="6dp"
+                android:paddingLeft="6dp"/>
 
             <ImageButton
                 style="?android:attr/buttonStyleSmall"
