--- a/app/src/main/res/layout-land/fragment_setup_match.xml
+++ b/app/src/main/res/layout-land/fragment_setup_match.xml
@@ -8,10 +8,10 @@
                 android:gravity="center_vertical|center_horizontal"
               android:weightSum="5">
     <RelativeLayout
+        android:id="@+id/setup_match_radiobtn_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="2"
-        >
+        android:layout_weight="1">
         <RadioGroup
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -223,16 +223,27 @@
         </RelativeLayout>
     </RelativeLayout>
 
-    <Button
-        style="?android:attr/buttonStyleSmall"
-        android:layout_width="wrap_content"
+    <RelativeLayout
+        android:id="@+id/setup_match_btn_view"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/create_match"
-        android:background="@color/green"
-        android:textColor="@color/white"
-        android:id="@+id/setup_match_btn"
-        android:layout_weight="3"
-        android:layout_marginTop="10dp"
-        android:layout_gravity="bottom|center_horizontal"/>
+        android:layout_weight="4"
+        android:layout_gravity="bottom"
+        android:layout_marginBottom="10dp"
+        android:layout_marginTop="10dp">
+
+        <Button
+            style="?android:attr/buttonStyleSmall"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/create_match"
+            android:background="@drawable/color_green_btn_border"
+            android:textColor="@color/white"
+            android:id="@+id/setup_match_btn"
+            android:layout_gravity="bottom|center_horizontal"
+            android:layout_centerInParent="true"
+            android:paddingLeft="6dp"
+            android:paddingRight="6dp"/>
+    </RelativeLayout>
 
 </LinearLayout>
