--- a/app/src/main/res/layout-land/fragment_setup_match.xml
+++ b/app/src/main/res/layout-land/fragment_setup_match.xml
@@ -5,13 +5,14 @@
                 android:layout_height="match_parent"
                 android:background="@drawable/border"
               android:orientation="vertical"
-                android:gravity="center_vertical|center_horizontal"
-              android:weightSum="5">
+              android:gravity="center_vertical|center_horizontal"
+              android:weightSum="6">
     <RelativeLayout
         android:id="@+id/setup_match_radiobtn_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="1">
+        android:layout_weight="1"
+        android:layout_gravity="center_vertical">
         <RadioGroup
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -227,10 +228,9 @@
         android:id="@+id/setup_match_btn_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="4"
+        android:layout_weight="3"
         android:layout_gravity="bottom"
-        android:layout_marginBottom="10dp"
-        android:layout_marginTop="10dp">
+        >
 
         <Button
             style="?android:attr/buttonStyleSmall"
