--- a/app/src/main/res/layout-land/stats_entry.xml
+++ b/app/src/main/res/layout-land/stats_entry.xml
@@ -24,10 +24,11 @@
 
         <ProgressBar
             style="?android:attr/progressBarStyleHorizontal"
-            android:layout_width="wrap_content"
+            android:layout_width="400dp"
             android:layout_height="wrap_content"
             android:id="@+id/stats_progbar_point"
-            android:layout_centerInParent="true"/>
+            android:layout_centerInParent="true"
+            android:progressDrawable="@drawable/progress_bar_style"/>
 
         <ImageView
             android:layout_width="40dp"
@@ -37,6 +38,7 @@
             android:contentDescription="@string/point_image_description"
             android:layout_toLeftOf="@id/stats_progbar_point"
             android:layout_centerInParent="true"/>
+
     </RelativeLayout>
 
     <RelativeLayout
@@ -47,12 +49,13 @@
 
         <ProgressBar
             style="?android:attr/progressBarStyleHorizontal"
-            android:layout_width="wrap_content"
+            android:layout_width="400dp"
             android:layout_height="wrap_content"
             android:id="@+id/stats_progbar_pawn"
             android:progress="100"
             android:max="200"
-            android:layout_centerInParent="true"/>
+            android:layout_centerInParent="true"
+            android:progressDrawable="@drawable/progress_bar_style"/>
 
         <ImageView
             android:layout_width="40dp"
