--- a/app/src/main/res/layout-land/trophy_entry.xml
+++ b/app/src/main/res/layout-land/trophy_entry.xml
@@ -68,7 +68,8 @@
             android:layout_toLeftOf="@+id/trophy_view_img"
             android:layout_alignParentBottom="false"
             android:layout_centerVertical="true"
-            android:layout_marginTop="40dp"/>
+            android:layout_marginTop="40dp"
+            android:progressDrawable="@drawable/progress_bar_style"/>
     </RelativeLayout>
 
 </LinearLayout>
