--- a/app/src/main/res/drawable/progress_bar_style.xml
+++ b/app/src/main/res/drawable/progress_bar_style.xml
@@ -17,8 +17,8 @@
                 <corners android:radius="5dip" />
                 <gradient
                     android:angle="0"
-                    android:endColor="#303F9F"
-                    android:startColor="#3F51B5" />
+                    android:endColor="@color/primary_progress_bar"
+                    android:startColor="@color/secondary_progress_bar" />
             </shape>
         </clip>
     </item>
