--- a/app/src/main/res/layout-land/fragment_canvas.xml
+++ b/app/src/main/res/layout-land/fragment_canvas.xml
@@ -5,15 +5,15 @@
     tools:context="school.throstur.backgammonandroid.Fragments.CanvasFragment"
     >
 
-    <ImageView
+    <school.throstur.backgammonandroid.DrawingCanvas
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/drawing_canvas"
-        android:background="@drawable/game_board" />
+        />
 
     <Button
         android:layout_width="200dp"
-        android:layout_height="60dp"
+        android:layout_height="80dp"
         android:text="@string/throw_dice"
         android:drawableLeft="@drawable/ic_action_dice6"
         android:id="@+id/throw_dice_btn"
@@ -22,11 +22,11 @@
         android:textColor="@color/white"
         android:visibility="visible"
         android:padding="20dp"
-        android:layout_marginRight="120dp"/>
+        android:layout_marginRight="200dp"/>
 
     <Button
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="80dp"
         android:text="@string/end_turn"
         android:drawableLeft="@drawable/ic_check"
         android:id="@+id/end_turn_btn"
@@ -38,7 +38,7 @@
 
     <Button
         android:layout_width="200dp"
-        android:layout_height="60dp"
+        android:layout_height="80dp"
         android:text="@string/double_stakes"
         android:drawableLeft="@drawable/ic_star_border"
         android:id="@+id/flip_cube_btn"
@@ -46,7 +46,7 @@
         android:textColor="@color/white"
         android:background="@drawable/color_red_btn_border"
         android:visibility="visible"
-        android:layout_marginLeft="120dp"
+        android:layout_marginLeft="200dp"
         android:padding="20dp"/>
 
     <RelativeLayout
