--- a/app/src/main/res/layout-land/list_item_lobby.xml
+++ b/app/src/main/res/layout-land/list_item_lobby.xml
@@ -1,135 +1,164 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<TableRow xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="?android:attr/listPreferredItemHeightLarge"
     android:background="@drawable/border"
+              android:baselineAligned="false"
     >
-    <Button
-        style="?android:attr/buttonStyleSmall"
-        android:id="@+id/list_item_lobby_bnt"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        tools:text="Watch"
-        android:background="@drawable/color_orange_btn_border"
-        android:layout_centerVertical="true"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        android:textColor="@color/white"
-        android:paddingLeft="6dp"
-        android:paddingRight="6dp"/>
 
     <RelativeLayout
-        android:id="@+id/lobby_view_player_one"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:gravity="center"
-        android:layout_alignParentLeft="true"
-        android:layout_centerVertical="true">
+        android:id="@+id/lobby_view_game_info"
+        android:layout_weight="8"
+        android:layout_gravity="left|center_vertical">
 
-        <ImageView
-            android:id="@+id/list_item_lobby_playerOneImg"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:contentDescription="@string/player_image_description"
-            android:src="@drawable/ic_face"
-            android:layout_centerHorizontal="true"/>
-
-        <TextView
-            android:id="@+id/list_item_lobby_playerOne"
+        <RelativeLayout
+            android:id="@+id/lobby_view_player_one"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/list_item_lobby_playerOneImg"
-            android:textStyle="bold"
-            android:padding="4dp"
-            tools:text="Player one"
-            android:layout_centerInParent="true"/>
+            android:gravity="center"
+            android:layout_gravity="center_vertical"
+            android:layout_alignParentLeft="true">
+
+            <ImageView
+                android:id="@+id/list_item_lobby_playerOneImg"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:contentDescription="@string/player_image_description"
+                android:src="@drawable/ic_face"
+                android:layout_centerHorizontal="true"/>
+
+            <TextView
+                android:id="@+id/list_item_lobby_playerOne"
+                android:layout_width="100dp"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/list_item_lobby_playerOneImg"
+                android:textStyle="bold"
+                android:padding="4dp"
+                tools:text="Looooong player one"
+                android:layout_centerInParent="true"
+                android:singleLine="true"
+                android:textAlignment="center"/>
+
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:id="@+id/lobby_view_player_two"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:layout_gravity="center_vertical"
+            android:layout_toRightOf="@+id/lobby_view_player_one">
+
+            <ImageView
+                android:id="@+id/list_item_lobby_playerTwoImg"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:contentDescription="@string/player_image_description"
+                android:src="@drawable/ic_face"
+                android:layout_centerHorizontal="true"/>
+
+            <TextView
+                android:id="@+id/list_item_lobby_playerTwo"
+                android:layout_width="100dp"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/list_item_lobby_playerTwoImg"
+                android:textStyle="bold"
+                android:padding="4dp"
+                tools:text="Looooong player two"
+                android:layout_centerInParent="true"
+                android:singleLine="true"
+                android:textAlignment="center"/>
+
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:id="@+id/lobby_view_player_point"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:layout_gravity="center_vertical"
+            android:layout_toRightOf="@+id/lobby_view_player_two">
+
+            <ImageView
+                android:id="@+id/list_item_lobby_pointImage"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:contentDescription="@string/point_image_description"
+                android:src="@drawable/ic_point"
+                android:layout_centerHorizontal="true"/>
+
+            <TextView
+                android:id="@+id/list_item_lobby_points"
+                android:layout_width="100dp"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/list_item_lobby_pointImage"
+                android:textStyle="bold"
+                android:padding="4dp"
+                tools:text="Points"
+                android:layout_centerInParent="true"
+                android:singleLine="true"
+                android:textAlignment="center"/>
+
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:id="@+id/lobby_view_clock"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:layout_gravity="center_vertical"
+            android:layout_alignParentRight="false"
+            android:layout_toRightOf="@+id/lobby_view_player_point">
+
+            <ImageView
+                android:id="@+id/list_item_lobby_clockImage"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:contentDescription="@string/clock_image_description"
+                android:src="@drawable/ic_clock"
+                android:layout_centerHorizontal="true"/>
+
+            <TextView
+                android:id="@+id/list_item_lobby_clockText"
+                android:layout_width="100dp"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/list_item_lobby_clockImage"
+                android:textStyle="bold"
+                android:padding="4dp"
+                tools:text="Time"
+                android:layout_centerInParent="true"
+                android:singleLine="true"
+                android:textAlignment="center"/>
+
+        </RelativeLayout>
 
     </RelativeLayout>
 
     <RelativeLayout
-        android:id="@+id/lobby_view_player_two"
+        android:id="@+id/lobby_view_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:gravity="center"
-        android:layout_toRightOf="@id/lobby_view_player_one"
-        android:layout_centerVertical="true">
+        android:layout_weight="1"
+        android:layout_gravity="center_vertical|right"
+        >
 
-        <ImageView
-            android:id="@+id/list_item_lobby_playerTwoImg"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:contentDescription="@string/player_image_description"
-            android:src="@drawable/ic_face"
-            android:layout_centerHorizontal="true"/>
-
-        <TextView
-            android:id="@+id/list_item_lobby_playerTwo"
-            android:layout_width="wrap_content"
+        <Button
+            style="?android:attr/buttonStyleSmall"
+            android:id="@+id/list_item_lobby_bnt"
+            android:layout_width="100dp"
             android:layout_height="wrap_content"
-            android:layout_below="@id/list_item_lobby_playerTwoImg"
-            android:textStyle="bold"
-            android:padding="4dp"
-            tools:text="Player two"
+            android:layout_alignParentRight="false"
+            tools:text="Watch"
+            android:background="@drawable/color_orange_btn_border"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:textColor="@color/white"
+            android:paddingLeft="6dp"
+            android:paddingRight="6dp"
             android:layout_centerInParent="true"/>
-
     </RelativeLayout>
 
-    <RelativeLayout
-        android:id="@+id/lobby_view_player_point"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:layout_toRightOf="@id/lobby_view_player_two"
-        android:layout_centerVertical="true">
-
-        <ImageView
-            android:id="@+id/list_item_lobby_pointImage"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:contentDescription="@string/point_image_description"
-            android:src="@drawable/ic_point"
-            android:layout_centerHorizontal="true"/>
-
-        <TextView
-            android:id="@+id/list_item_lobby_points"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/list_item_lobby_pointImage"
-            android:textStyle="bold"
-            android:padding="4dp"
-            tools:text="Points"
-            android:layout_centerInParent="true"/>
-
-    </RelativeLayout>
-
-    <RelativeLayout
-        android:id="@+id/lobby_view_clock"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:layout_toRightOf="@id/lobby_view_player_point"
-        android:layout_centerVertical="true">
-
-        <ImageView
-            android:id="@+id/list_item_lobby_clockImage"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:contentDescription="@string/clock_image_description"
-            android:src="@drawable/ic_clock"
-            android:layout_centerHorizontal="true"/>
-
-        <TextView
-            android:id="@+id/list_item_lobby_clockText"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/list_item_lobby_clockImage"
-            android:textStyle="bold"
-            android:padding="4dp"
-            tools:text="Time"
-            android:layout_centerInParent="true"/>
-
-    </RelativeLayout>
-
-</RelativeLayout>
+</TableRow>
