--- a/app/src/main/res/layout-land/activity_stats.xml
+++ b/app/src/main/res/layout-land/activity_stats.xml
@@ -4,7 +4,8 @@
               xmlns:android.support.v7.recyclerview="http://schemas.android.com/apk/res-auto"
               android:orientation="horizontal"
               android:layout_width="match_parent"
-              android:layout_height="match_parent">
+              android:layout_height="match_parent"
+                android:background="@color/primaryBackground">
 
     <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
