--- a/app/src/main/res/layout-land/fragment_setup_match.xml
+++ b/app/src/main/res/layout-land/fragment_setup_match.xml
@@ -3,7 +3,7 @@
                 xmlns:tools="http://schemas.android.com/tools"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="@drawable/border"
+                android:background="@color/primaryBackground"
               android:orientation="vertical"
               android:gravity="center_vertical|center_horizontal"
               android:weightSum="6">
